cmake_minimum_required(VERSION 3.23)
project(C--PrimerPlus)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(C--PrimerPlus
#        "5.3 express.cpp"
#        "5.4_formore.cpp"
#        "5.5 bigstep.cpp"
#        "5.6 forstr1.cpp"
#        "5.7 plus_one.cpp"
#        "5.8 block.cpp"
#        "5.9 forstr2.cpp"
#        "chapter5/5.11 compstr1.cpp"
#        "chapter5/5.12 compstr2.cpp"
        "chapter5/5.13 while.cpp"

        )
